<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_movie_poster"
            android:layout_width="96dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/movie_poster_display" />

        <TextView
            android:id="@+id/item_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:alpha="0.7"
            android:text="@string/movie_title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/item_movie_poster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:breakStrategy="balanced" />

        <TextView
            android:id="@+id/item_movie_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/release_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/item_movie_title" />

        <TextView
            android:id="@+id/item_movie_genre"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:alpha="0.7"
            android:text="@string/genre"
            app:layout_constraintStart_toEndOf="@+id/item_movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/item_movie_release_date"
            android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toStartOf="@+id/item_more_info" />

        <TextView
            android:id="@+id/item_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/more_info"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>