<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movieDetailsBackdrop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/backdrop_image"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="VectorDrawableCompat"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/movieDetailsPoster"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/movie_poster_display"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="@id/movieDetailsBackdrop"
            app:layout_constraintTop_toTopOf="@id/movieDetailsBackdrop"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/movieDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            app:layout_constraintStart_toEndOf="@id/movieDetailsPoster"
            app:layout_constraintTop_toTopOf="@id/movieDetailsBackdrop"
            app:layout_constraintEnd_toEndOf="@id/movieDetailsBackdrop"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/movieDetailsFeaturedCrew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/featured_crew"
            app:layout_constraintStart_toEndOf="@id/movieDetailsPoster"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsTitle"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/movieDetailsCast"
            android:layout_width="102dp"
            android:layout_height="148dp"
            android:text="@string/cast"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="87dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/movieDetailsPoster"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsFeaturedCrew"
            app:layout_constraintEnd_toStartOf="@id/movieDetailsCrew" />

        <TextView
            android:id="@+id/movieDetailsCrew"
            android:layout_width="102dp"
            android:layout_height="148dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/crew"
            app:layout_constraintStart_toEndOf="@id/movieDetailsCast"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsFeaturedCrew"
            app:layout_constraintEnd_toEndOf="@id/movieDetailsBackdrop" />

        <TextView
            android:id="@+id/movieDetailsOverviewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsBackdrop"/>

        <TextView
            android:id="@+id/movieDetailsOverviewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsOverviewTitle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/buttonViewTheater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="128dp"
            android:layout_marginStart="128dp"
            android:text="View Theater"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetailsOverviewText"
            app:layout_constraintVertical_bias="0.487" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>